@@ -17,6 +17,10 @@ Post-v3.1.0
        in order to create OVSDB sockets with access mode of 0770.
    - QoS:
      * Added new configuration option 'jitter' for a linux-netem QoS type.
+  - OVSDB:
+     * New unixctl command 'ovsdb-server/show-memory-trim-on-compaction'.
+       This command shows current value for memory trimming setting for
+       OVSDB server.
 
 
 v3.1.0 - 16 Feb 2023
